update ufile sdk
    1. change to okhttp
    2. add async request
    3. simplified code
    4. update jar libs
    5. add code comment

--- a/v1/UFileSDK/src/config.properties
+++ b/v1/UFileSDK/src/config.properties
@@ -1,4 +1,7 @@
+Bucket=paste your bucket here
 UCloudPublicKey=paste your public key here
 UCloudPrivateKey=paste your private key here
-ProxySuffix=.<region>.ufileos.com
-DownloadProxySuffix=.ufile.ucloud.com.cn
+ProxySuffix=paste your proxy suffix here if any
+GlobalUploadProxySuffix=paste your global upload proxy suffix here if any
+GlobalDownloadProxySuffix=paste your global download proxy suffix here if any
+CDNHost=paste your cdn speed up host here if any
